--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
- 
+ <div>
+    mehmet tas
+    <h1>hello word</h1>
+ </div>
   </body>
 </html>
