--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
+      <!--! Glide.js Css CDN  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css">
+  <!--! Boostrap Icons CDN  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
- <div>
-    mehmet tas
-    <h1>hello word</h1>
- </div>
+<!--? header start -->
+<header>
+<div class="global-notification">
+    <p>
+        SUMMER SALE FOR ALL SWIM SUITS AND FREE EXPRESS INTERNATIONAL DELIVERY
+        - OFF 50%!
+        <a href="shop.html">SHOP NOW</a>
+      </p>
+</div>    
+<div class="header-row">
+    <div class="container">
+        <div class="header-wrapper">
+            <div class="header-left"><a href="#">LOGO</a></div>
+            <div class="header-center">
+                <nav class="navigation">
+                    <ul>
+                        <li class="">
+                            <a href="#">Home</a>
+                            <i class="bi bi-chevron-down"></i>
+                        </li>
+                        <li class="">
+                            <a href="#">Shop</a>
+                            <i class="bi bi-chevron-down"></i>
+                        </li>
+                        <li class="">
+                            <a href="#">Blog</a>
+                            <i class="bi bi-chevron-down"></i>
+                        </li>
+                        <li class="">
+                            <a href="#">Contact</a>
+                            <i class="bi bi-chevron-down"></i>
+                        </li>
+
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-right"></div>
+        </div>
+    </div>
+</div>
+
+
+</header>
+<!--? header end -->
+
   </body>
 </html>
