--- a/index.html
+++ b/index.html
@@ -27,28 +27,46 @@
             <div class="header-left"><a href="#">LOGO</a></div>
             <div class="header-center">
                 <nav class="navigation">
-                    <ul>
-                        <li class="">
-                            <a href="#">Home</a>
+                    <ul class="menu-list">
+                        <li class="menu-list-item">
+                            <a href="#" class="menu-link">Home</a>
                             <i class="bi bi-chevron-down"></i>
                         </li>
-                        <li class="">
-                            <a href="#">Shop</a>
+                        <li class="menu-list-item">
+                            <a href="#" class="menu-link">Shop</a>
                             <i class="bi bi-chevron-down"></i>
                         </li>
-                        <li class="">
-                            <a href="#">Blog</a>
+                        <li class="menu-list-item">
+                            <a href="#" class="menu-link">Blog</a>
                             <i class="bi bi-chevron-down"></i>
                         </li>
-                        <li class="">
-                            <a href="#">Contact</a>
+                        <li class="menu-list-item">
+                            <a href="#" class="menu-link">Contact</a>
                             <i class="bi bi-chevron-down"></i>
                         </li>
 
                     </ul>
                 </nav>
             </div>
-            <div class="header-right"></div>
+            <div class="header-right">
+                <div class="header-right-links">
+                    <div class="header-account">
+                        <a href="#">
+                            <i class="bi bi-person"></i>
+                        </a>
+                        <button class="search-toggle">
+                            <i class="bi bi-search"></i>
+                        </button>
+                        <a href="#">
+                            <i class="bi bi-heart"></i>
+                        </a>
+                        <a href="#">
+                            <i class="bi bi-bag"></i>
+                            <span class="header-cart-count"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
