--- a/index.html
+++ b/index.html
@@ -35,9 +35,38 @@
               <nav class="navigation">
                 <ul class="menu-list">
                   <li class="menu-list-item">
-                    <a href="#" class="menu-link"
+                    <a href="#" class="menu-link active"
                       >Home <i class="bi bi-chevron-down"></i>
                     </a>
+                    <div class="menu-dropdown-wrapper">
+                      <ul class="menu-dropdown-content">
+                        <li>
+                          <a href="#">Home Clean</a>
+                        </li>
+                        <li>
+                          <a href="#">Home Collection</a>
+                        </li>
+                        <li>
+                          <a href="#">Home Minimal</a>
+                        </li>
+                        <li>
+                          <a href="#">Home Modern</a>
+                        </li>
+                        <li>
+                          <a href="#">Home Parallax</a>
+                        </li>
+
+                          <li>
+                          <a href="#">Home Strong</a>
+                        </li>
+                          <li>
+                          <a href="#">Home Style</a>
+                        </li>
+                        <li>
+                          <a href="#">Home Rtl</a>
+                        </li>
+                      </ul>
+                    </div>
                   </li>
                   <li class="menu-list-item">
                     <a href="#" class="menu-link"
